[package]
name = "spaggiari-voti"
version = "0.1.0"
edition = "2024"

[dependencies]
bees = { git = "https://github.com/confused-ace-noises/bees", version = "=0.1.0"}
dotenvy = "0.15.7"
tokio = "1.48.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1.89"

[profile.release]
opt-level = 3